--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ candle-nn = "0.9.1"
 tokenizers = { version = "0.21.2", features = ["http"] }
 # hf-hub = "0.4.1"
 serde_json = "1.0.99"
+serde = "1.0"
